Hide input field

--- a/Main.html
+++ b/Main.html
@@ -8,7 +8,7 @@
     <body>
 
       <div class="hamburger-menu">
-        <input id="menu__toggle" type="checkbox" />
+        <input id="menu__toggle" type="checkbox" style="display:none" />
         <label class="menu__btn" for="menu__toggle">
           <span></span>
         </label>
