--- a/Main.html
+++ b/Main.html
@@ -21,11 +21,12 @@
       </div>
 
       <div class="context">
-        <h1>Pure Css Animated Background</h1>
+        <h1>Hugo Spear </h1>
     </div>
 
 
       <div class="area" >
+        <button class="btn">Blog</button>
             <ul class="circles">
                     <li></li>
                     <li></li>
@@ -39,29 +40,5 @@
                     <li></li>
             </ul>
     </div >
-
-        <div class="container">
-            <a class="button" href="https://digitalbootcamps489132825.wordpress.com/home/" style="--color:#1e9bff;">
-              <span></span>
-              <span></span>
-              <span></span>
-              <span></span>
-              Blog
-            </a>
-            <a class="button" href="https://github.com/HugoSpear5/Projects.git" style="--color: #ff1867;">
-              <span></span>
-              <span></span>
-              <span></span>
-              <span></span>
-              Git Hub
-            </a>
-            <a class="button" href="#" style="--color: #6eff3e;">
-              <span></span>
-              <span></span>
-              <span></span>
-              <span></span>
-              About Me
-            </a>
-          </div>
     </body>
 </html>
