--- a/Main.html
+++ b/Main.html
@@ -7,13 +7,13 @@
   <link rel="stylesheet" href="Style.css">
   <style> @import url('https://fonts.googleapis.com/css2?family=Concert+One&display=swap'); </style>
   <script src="https://kit.fontawesome.com/d228af265e.js" crossorigin="anonymous"></script>
+  <script defer src="Magic.js"></script>
 
 </head>
 
 <body>
+  <section>
   <div class="area">
-
-    <!-- Created a wrapper div to called nav to contain all buttons I may want to add -->
     <nav class="nav">
       <div>
         <img class="logo" src="icon1.png">
@@ -43,6 +43,29 @@
       </p>
     </div>
   </div>
+</section>
+
+<section>
+<div class="container">
+  <div>
+    <h2>Title</h2>
+    <div class="cards">
+      <div class="text-card">
+        <h3>Title</h3>
+        <p>Weather App</p>
+      </div>
+      <div class="text-card">
+        <h3>Title</h3>
+        <p>Dota API</p>
+      </div>
+      <div class="text-card">
+        <h3>Title</h3>
+        <p>Other</p>
+      </div>
+    </div>
+  </div>
+</div>
+</section>
 
 </body>
 
