--- a/Main.html
+++ b/Main.html
@@ -16,7 +16,7 @@
   <div class="area">
     <nav class="nav">
       <div>
-        <img class="logo" src="icon1.png">
+        <img class="logo" src="C:\Users\Hugo\Downloads\icon1.png">
         <a class="btn btn-5" href="https://digitalbootcamps489132825.wordpress.com/home/" target="_blank">Blog</a>
         <a class="btn btn-6" href="https://github.com/HugoSpear5" target="_blank">Git Hub</a>
         <div class="btn btn-7">Home</div>
